--- a/cmd/dcrdata/public/scss/scroller.scss
+++ b/cmd/dcrdata/public/scss/scroller.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  overflow: visible;
+  overflow: hidden;
 
   .top-nav {
     height: 70px;
@@ -47,6 +47,7 @@
   padding: 10px;
   gap: 10px;
   justify-content: center;
+  z-index: 100;
 }
 
 .home-thumbnail-bar img {
